Fix z-index issues

--- a/frontend/src/style/tailwind.css
+++ b/frontend/src/style/tailwind.css
@@ -754,6 +754,34 @@ html {
   z-index: auto;
 }
 
+.z-\[10000\] {
+  z-index: 10000;
+}
+
+.z-\[1002\] {
+  z-index: 1002;
+}
+
+.z-\[100\] {
+  z-index: 100;
+}
+
+.z-\[0\] {
+  z-index: 0;
+}
+
+.z-\[10001\] {
+  z-index: 10001;
+}
+
+.z-\[20000\] {
+  z-index: 20000;
+}
+
+.z-\[10005\] {
+  z-index: 10005;
+}
+
 .col-auto {
   grid-column: auto;
 }
@@ -2945,6 +2973,18 @@ html {
 
   .md\:z-\[50\] {
     z-index: 50;
+  }
+
+  .md\:z-\[1004\] {
+    z-index: 1004;
+  }
+
+  .md\:z-\[10000\] {
+    z-index: 10000;
+  }
+
+  .md\:z-\[10001\] {
+    z-index: 10001;
   }
 
   .md\:mx-auto {
